添加自定义Tera函数用于显示文章列表

--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -40,7 +40,7 @@
                           </a>
                           <!-- Dropdown - User Information -->
                           <div  id="user-dropdown-list" class="dropdown-menu dropdown-menu-right shadow animated--grow-in  bg-primary text-white" aria-labelledby="userDropdown">
-                            <a class="dropdown-item login"  href="/article/admin/edit/add">
+                            <a class="dropdown-item login"  href="/article/admin/edit/add" target="_blank">
                                 <i class="fas fa-edit  fa-sm mr-2 text-gray-400"></i>
                                 写博客
                             </a>
@@ -240,14 +240,14 @@
         <section class="copyright py-4 text-center text-white">
             <div class="container"><small class="pre-wrap">Copyright © tianlangstudio@aliyun.com </small></div>
         </section>
-        <div style="display: none;"  id="tl-alter" role="alert" aria-live="assertive" aria-atomic="true">
+        <div style="display: none;"  id="tl-alert" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
-              <strong class="mr-auto" id="tl-alter-title"></strong>
+              <strong class="mr-auto" id="tl-alert-title"></strong>
               <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
-            <div  id="tl-alter-msg" class="toast-body">
+            <div  id="tl-alert-msg" class="toast-body">
                  
             </div>
           </div>
