--- a/template/freelancer/index.html
+++ b/template/freelancer/index.html
@@ -30,13 +30,15 @@
         <!-- Portfolio Grid Items-->
         <div class="row justify-content-center">
             <!-- Portfolio Items-->
-            <!--div class="col-md-6 col-lg-4 mb-5">
+            {% for article in list_new_articles(page_no=0, page_size=6) %}
+            <div class="col-md-6 col-lg-4 mb-5">
                 <div class="portfolio-item mx-auto">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                    </div><img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
+                    </div>{{loop.index}}<img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
                 </div>
-            </div-->
+            </div>
+            {% endfor %}
         </div>
     </div>
 </section>
