--- a/template/freelancer/admin/article/edit.html
+++ b/template/freelancer/admin/article/edit.html
@@ -13,14 +13,17 @@
 {% block content %}
 <div class="container">
     <form>
+        <input type="hidden" id="tl-article-is-edit" name="is_edit" value="{{is_eidt | default(value=false) }}">
+        <input type="hidden" id="tl-article-id" name="article_id" value="{{article_id | default(value='') }}">
         <div class="form-group row">
           <label for="tl-article-name-in" class="col-sm-2 col-form-label">名称：</label>
           <div class="col-sm-10">
-            <input type="text"  id="tl-article-name-in"    class="form-control" value="" placeholder="先取个名字吧">
+            <input type="text"  id="tl-article-name-in"    class="form-control" value="{{article_name | default(value='') }}" placeholder="先取个名字吧">
           </div>
         </div>
         <div class="form-group row" >
           <div class="col-sm-12" id="tl-article-content-cnr">
+                 {{article_content | default(value='') }}
           </div>
         </div>
         <div class="form-group row">
