--- a/static/tmpl/freelancer/css/styles.css
+++ b/static/tmpl/freelancer/css/styles.css
@@ -10046,7 +10046,23 @@ h3 {
   max-width: 25rem;
   border-radius: 0.5rem;
   overflow: hidden;
+  height: 200px;
+  background: #cdcfd2;
+  padding: 18px;
 }
+.portfolio-item .article-title {
+  font-size: xx-large;
+  font-weight: bolder;
+}
+.portfolio-item .article-subtitle {
+  font-size: large;
+}
+.portfolio-item .article-intro {
+  font-size: small;
+}
+
+
+
 .portfolio .portfolio-item .portfolio-item-caption {
   position: absolute;
   top: 0;
@@ -10171,11 +10187,13 @@ form .row:first-child .floating-label-form-group {
   align-items: center;
   justify-content: center;
   font-size: 2rem;
-  background-color: #0061f2;
   color: #fff;
   border-radius: 100%;
 }
-
+img.contract-qq-group {
+  border-radius: 100%;
+  z-index: -2;
+}
 .navbar-brand img {
   max-width: 13.5rem;
 }
