add share btn and loading and so on

--- a/template/freelancer/admin/article/edit.html
+++ b/template/freelancer/admin/article/edit.html
@@ -31,7 +31,10 @@
         <div class="form-group row">
             <div class="col-sm-10"></div>
             <div class="col-sm-2">
-                <div class="btn btn-info form-control" id="tl-publish-btn">发布</div>
+                <div class="btn btn-outline-info form-control" id="tl-publish-btn">
+                  <span class="loading spinner-border spinner-border-sm" style="display: none;"  role="status" aria-hidden="true" ></span>
+                  发布
+                </div>
             </div>
         </div>
       </form>
