--- a/template/freelancer/index.html
+++ b/template/freelancer/index.html
@@ -115,8 +115,8 @@
                 <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://edu.51cto.com/sd/aca72">
                         51cto
                 </a>
-                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://pan.baidu.com/mall/home/shop?sid=359684">
-                        baidu
+                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://shop.zbj.com/5678348/">
+                        咨询
                 </a>
                 <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.iqiyi.com/u/1826995037/feeds">
                         iqiyi
