--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -15,6 +15,7 @@
         <!-- Fonts CSS-->
         <link rel="stylesheet" href="/static/tmpl/freelancer/css/heading.css">
         <link rel="stylesheet" href="/static/tmpl/freelancer/css/body.css">
+        <link rel="stylesheet" href="/static/com/share/css/share.css">
         {% endblock head %}
     </head>
     <body id="page-top">
@@ -243,17 +244,20 @@
                 </div>
             </div>
         </div>
-        <div style="display: none;"  id="tl-alert" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-              <strong class="mr-auto" id="tl-alert-title"></strong>
-              <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+        <div style="position: absolute; top: 0; right: 0;">
+            <div   id="tl-alert" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+                <div class="toast-header">
+                <strong class="mr-auto" id="tl-alert-title"></strong>
+                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div  id="tl-alert-msg" class="toast-body">
+                </div>
             </div>
-            <div  id="tl-alert-msg" class="toast-body">
-                 
-            </div>
-          </div>
+        </div>
+        <!-- share btn-->
+        <div id="tl-share-btn" class="float-left"></div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed"><a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top"><i class="fa fa-chevron-up"></i></a></div>
         <!-- Bootstrap core JS-->
@@ -261,6 +265,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+        <script src="/static/com/share/js/share.js"></script>
         <!-- Core theme JS-->
         <script src="/static/tmpl/freelancer/js/scripts.js"></script>
         {% endblock footer %}
