--- a/static/tmpl/freelancer/css/styles.css
+++ b/static/tmpl/freelancer/css/styles.css
@@ -9979,11 +9979,15 @@ h3 {
   padding: 0.8rem;
 }
 
+#mainNav.navbar-shrink {
+  background-color: #6900c7 !important;
+}
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     transition: padding-top 0.3s, padding-bottom 0.3s;
+    opacity: 0.7;
   }
   #mainNav .navbar-brand {
     font-size: 1.75em;
@@ -10157,6 +10161,7 @@ form .row:first-child .floating-label-form-group {
 
 .copyright {
   background-color: #4e0094;
+  margin-top: 10px;
 }
 
 #brandImage {
