--- a/template/freelancer/admin/article/edit.html
+++ b/template/freelancer/admin/article/edit.html
@@ -36,7 +36,18 @@
                   发布
                 </div>
             </div>
-        </div>
+       
+          </div>
+          <div class="form-group row">
+            <label for="tl-article-rcmd-weight" class="col-sm-3 col-form-label">推荐权重：</label>
+            <div class="col-sm-3">
+              <input type="number"  id="tl-article-rcmd-weight"    class="form-control" value="{{article.rcmd_weight | default(value= -1) }}" placeholder="排序权重越大越排在前面">
+            </div>
+            <label for="tl-article-url" class="col-sm-3 col-form-label">跳转链接：</label>
+            <div class="col-sm-3">
+              <input type="text"  id="tl-article-url"    class="form-control" value="{{article.url | default(value= '') }}" placeholder="跳转url">
+            </div>
+          </div>
       </form>
 </div>
 {% endblock content %}
