--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -20,7 +20,7 @@
     </head>
     <body id="page-top">
         {% block nav %}
-        <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
+        <nav class="navbar navbar-expand-lg fixed-top" id="mainNav">
             <div class="container"><a class="navbar-brand js-scroll-trigger" href="#page-top">天朗工作室</a>
                 <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -64,6 +64,7 @@
         </nav>
         {% endblock nav %}
         {% block content %}
+        {% block content_header %}
         <header class="masthead bg-primary  text-center">
             <div class="container d-flex align-items-right flex-column">
                 <!-- Masthead Avatar Image--><!--img class="masthead-avatar mb-5" src="/static/tmpl/freelancer/assets/img/avataaars.svg" alt=""-->
@@ -79,6 +80,7 @@
                 <p class="pre-wrap masthead-subheading font-weight-light mb-0">一个不安分的程序员 </p>
             </div>
         </header>
+        {% endblock content_header %}
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
