文章添加创建修改时间等

--- a/template/freelancer/articles.html
+++ b/template/freelancer/articles.html
@@ -10,61 +10,32 @@
 {% endblock content_header %}
   <!-- Main Content -->
   <div class="container">
+
     <div class="row">
+    
       <div class="col-lg-8 col-md-10 mx-auto">
+        {% for article in list_new_articles(page_no=page_no,  page_size=page_size)  %}
+        {% if article.url %}
+            {%set article_url=article.url %}
+        {% else %}
+            {%set article_url='/view/article/' ~ article.id %}
+        {% endif %}
         <div class="post-preview">
-          <a href="post.html">
+          <a href="{{article_url}}" target="_blank">
             <h2 class="post-title">
-              Man must explore, and this is exploration at its greatest
+                 {{article.title | default(value='')}}
             </h2>
             <h3 class="post-subtitle">
-              Problems look mighty small from 150 miles up
+                 {{article.subtitle | default(value='')}}
             </h3>
           </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 24, 2019</p>
+          <p class="post-meta">
+            <a href="#">{{article.creater}}</a>
+             发布于{{article.create_at|date(format="%Y年%m月%d日%H:%M")}}
+          </p>
         </div>
         <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-            </h2>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on September 18, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Science has not yet mastered prophecy
-            </h2>
-            <h3 class="post-subtitle">
-              We predict too much for the next year and yet far too little for the next ten.
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on August 24, 2019</p>
-        </div>
-        <hr>
-        <div class="post-preview">
-          <a href="post.html">
-            <h2 class="post-title">
-              Failure is not an option
-            </h2>
-            <h3 class="post-subtitle">
-              Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-            </h3>
-          </a>
-          <p class="post-meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on July 8, 2019</p>
-        </div>
-        <hr>
+       {%endfor %}
         <!-- Pager -->
         <div class="clearfix">
           <a class="btn btn-primary float-right" href="/view/articles?page_no={{page_no + 1}}&page_size=7">查看更多 &rarr;</a>
