--- a/template/freelancer/article.html
+++ b/template/freelancer/article.html
@@ -16,7 +16,7 @@
             <h2 class="subheading">{{article_info.subtitle}}</h2>
             <span class="meta">由
               <a href="#">{{article_info.creater}}</a> 
-              于2019年7月7日发布
+              发布于{{article_info.create_at|date(format="%Y年%m月%d日%H:%M")}}
             </span>
               {% if  article_info.creater == username %} 
                     <span class="meta text-right">
