修改因表字段名称与参数名称一致引起的数据操作不正确问题

--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -280,6 +280,16 @@
         <script src="/static/com/share/js/share.js"></script>
         <!-- Core theme JS-->
         <script src="/static/tmpl/freelancer/js/scripts.js"></script>
+        <script>
+            var _hmt = _hmt || [];
+            (function() {
+              var hm = document.createElement("script");
+              hm.src = "https://hm.baidu.com/hm.js?5a990c2b8047428b734d3a86ee9e881f";
+              var s = document.getElementsByTagName("script")[0]; 
+              s.parentNode.insertBefore(hm, s);
+            })();
+            </script>
+            
         {% endblock footer %}
     </body>
 </html>
