--- a/template/freelancer/index.html
+++ b/template/freelancer/index.html
@@ -1,4 +1,9 @@
 {% extends "freelancer/common/base.html" %}
+{% block head %}
+  {{super()}}
+  <meta name="description" content="一个不安分的程序员，愿做技术社区的一股清流，让技术帮助更多的人，分享编程感悟，成长我们一直在路上!">
+  <title>天朗工作室</title>
+{% endblock head %}
 {% block content%}
 <header class="masthead bg-primary  text-center">
     <div class="container d-flex align-items-right flex-column">
