--- a/template/freelancer/articles.html
+++ b/template/freelancer/articles.html
@@ -1,7 +1,9 @@
 {% extends "freelancer/common/base.html" %}
 {% block head %}
 {{super()}}
-<link rel="stylesheet" href="/static/tmpl/freelancer/css/article.css" />
+  <meta name="description" content="一个不安分的程序员，愿做技术社区的一股清流，让技术帮助更多的人，分享编程感悟，成长我们一直在路上!">
+  <title>博客@天朗工作室</title>
+   <link rel="stylesheet" href="/static/tmpl/freelancer/css/article.css" />
 {% endblock head %}
 
 {% block content %}
