--- a/template/freelancer/common/base.html
+++ b/template/freelancer/common/base.html
@@ -45,6 +45,10 @@
                                 <i class="fas fa-edit  fa-sm mr-2 text-gray-400"></i>
                                 写博客
                             </a>
+                              <a class="dropdown-item login"  href="/article/admin/under_review" target="_blank">
+                                  <i class="fas fa-edit  fa-sm mr-2 text-gray-400"></i>
+                                  审核
+                              </a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item login" id="tl-btn-logout"  data-toggle="modal" data-target="#logoutModal" href="#">
                               <i class="fas fa-sign-out-alt fa-sm mr-2 text-gray-400"></i>
