--- a/template/freelancer/index_cn.html
+++ b/template/freelancer/index_cn.html
@@ -1,21 +1,15 @@
-{% extends "freelancer/common/base.html" %}
+{% extends "freelancer/common/base_cn.html" %}
 {% block head %}
   {{super()}}
-  <meta name="description" content="A curious programmer，Willing to be a clean stream in the technical community, let technology help more people, share programming insights, and grow up on the way!">
-  <title>TianLang Studio</title>
-  <style>
-      #contact {
-          background: url(/static/img/5-star-feedback-upwork.png) no-repeat #f5f5f5;
-          background-size: 100% 100%;
-      }
-  </style>
+  <meta name="description" content="一个不安分的程序员，愿做技术社区的一股清流，让技术帮助更多的人，分享编程感悟，成长我们一直在路上!">
+  <title>天朗工作室</title>
 {% endblock head %}
 {% block content%}
 <header class="masthead bg-primary  text-center">
     <div class="container d-flex align-items-right flex-column">
         <!-- Masthead Avatar Image--><!--img class="masthead-avatar mb-5" src="/static/tmpl/freelancer/assets/img/avataaars.svg" alt=""-->
         <!-- Masthead Heading-->
-        <h5 class="masthead-heading mb-0">Fusion Zhu@TianLang Studio </h5>
+        <h5 class="masthead-heading mb-0">朱焕青@天朗工作室 </h5>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
             <div class="divider-custom-line"></div>
@@ -23,15 +17,14 @@
             <div class="divider-custom-line"></div>
         </div>
         <!-- Masthead Subheading-->
-        <p class="pre-wrap masthead-subheading font-weight-light mb-0">A Curious Programmer </p>
+        <p class="pre-wrap masthead-subheading font-weight-light mb-0">一个不安分的程序员 </p>
     </div>
-
 </header>
 <section class="page-section portfolio" id="portfolio">
     <div class="container-fluid">
         <!-- Portfolio Section Heading-->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Blog</h2>
+            <h2 class="page-section-heading text-secondary mb-0 d-inline-block">博客</h2>
         </div>
         <!-- Icon Divider-->
         <div class="divider-custom">
@@ -53,7 +46,7 @@
                     <a target="_blank" href=" {{article_url}}">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white">
-                            Click to View
+                            点击查看     
                         </div>
                     </div>
                     <div class="article-title">{{article.title}}</div>
@@ -61,7 +54,7 @@
                     <div class="article-intro text-break">
                         {{article.intro | truncate(length=88) }}
                         {% if  article.creater == username %} 
-                                <a target="_blank" href="/article/admin/edit/{{article.id}}">Edit</a>
+                                <a target="_blank" href="/article/admin/edit/{{article.id}}">编辑</a>
                         {% endif %}
                     </div>
                     </a>
@@ -73,10 +66,10 @@
                     <a target="_blank" href="/view/articles">
                     <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                         <div class="portfolio-item-caption-content text-center text-white">
-                            Click to View More
+                            点击查看更多
                         </div>
                     </div>
-                    <div class="article-title text-truncate">View More</div>
+                    <div class="article-title text-truncate">查看更多</div>
                     <div class="article-subtitle text-truncate"></div>
                     <div class="article-intro text-break"></div>
                     </a>
@@ -89,7 +82,7 @@
     <div class="container">
         <!-- About Section Heading-->
         <div class="text-center">
-            <h2 class="page-section-heading d-inline-block text-white">Who am I </h2>
+            <h2 class="page-section-heading d-inline-block text-white">谁是我 </h2>
         </div>
         <!-- Icon Divider-->
         <div class="divider-custom divider-light">
@@ -99,13 +92,11 @@
         </div>
         <!-- About Section Content-->
         <div class="row">
-            <div class="col-lg-8 col-sm-10 ml-auto mr-auto">
-                <p class="pre-wrap lead">
-                    I think Programming is a hands-on art.
-                    Willing to be a clear stream in the technical community, so that technology can help more people.
-                    I just like to learn new programing skills. e.g. Java JavaScript Rust Spring React BigData
-                    <a href="https://github.com/tianlangstudio" style="color: #80d2ff" target="_blank">View More ...</a>
-                </p>
+            <div class="col-lg-4 ml-auto">
+                <p class="pre-wrap lead">编程是需要动手的艺术</p>
+            </div>
+            <div class="col-lg-4 mr-auto">
+                <p class="pre-wrap lead">愿做技术社区的一股清流，让技术帮助更多的人</p>
             </div>
         </div>
     </div>
@@ -114,7 +105,7 @@
     <div class="container">
         <!-- Contact Section Heading-->
         <div class="text-center">
-            <h2 class="page-section-heading text-secondary d-inline-block mb-0">Contact </h2>
+            <h2 class="page-section-heading text-secondary d-inline-block mb-0">联系俺 </h2>
         </div>
         <!-- Icon Divider-->
         <div class="divider-custom">
@@ -126,15 +117,14 @@
         <div class="row justify-content-center">
             <div class="col-lg-4">
                 <div class="d-flex flex-column align-items-center">
-                    <div class="icon-contact mb-3"></div>
+                    <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
                     <div class="text-muted">Email</div><a class="lead font-weight-bold" href="mailto:tianlangstudio@aliyun.com">tianlangstudio@aliyun.com</a>
                 </div>
             </div>
             <div class="col-lg-4">
                 <div class="d-flex flex-column align-items-center">
-                    <div class="icon-contact mb-3"></div>
-                    <div class="text-muted">Fusion Zhu at</div>
-                    <a class="lead font-weight-bold" target="_blank" href="https://www.upwork.com/freelancers/huanqingzhu">Upwork</a>
+                    <div class="icon-contact mb-3"><img class="contract-qq-group" src="/static/img/qqgroup-keeplearning.png"/></div>
+                    <div class="text-muted">QQ群</div><a class="lead font-weight-bold" href="#">579896894</a>
                 </div>
             </div>
         </div>
@@ -145,26 +135,30 @@
         <div class="row">
             <!-- Footer Location-->
             <div class="col-lg-4 mb-5 mb-lg-0">
-                <h4 class="mb-4">Where am I</h4>
-                <p class="pre-wrap lead mb-0">Shenzhen China</p>
+                <h4 class="mb-4">俺在哪里</h4>
+                <p class="pre-wrap lead mb-0">在深圳嘞河南人</p>
             </div>
             <!-- Footer Social Icons-->
             <div class="col-lg-4 mb-5 mb-lg-0">
-                <h4 class="mb-4">More</h4>
+                <h4 class="mb-4">多看看俺</h4>
+                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://edu.51cto.com/sd/aca72">
+                        51cto
+                </a>
+                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://shop.zbj.com/5678348/">
+                        咨询
+                </a>
+                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.iqiyi.com/u/1826995037/feeds">
+                        iqiyi
+                </a>
                 <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://github.com/TianLangStudio/">
-                    GitHub
+                        github
                 </a>
-                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://www.upwork.com/freelancers/huanqingzhu">
-                    Upwork
-                </a>
-                <a class="btn btn-outline-light btn-social mx-1" target="_blank" href="https://twitter.com/CoderFusionZhu">
-                    Twitter
-                </a>
+        
             </div>
             <!-- Footer About Text-->
             <div class="col-lg-4">
-                <h4 class="mb-4">Attention!</h4>
-                <p class="pre-wrap lead mb-0">This website is used for functional (teaching) demonstration, data is deleted from time to time, availability is not guaranteed</p>
+                <h4 class="mb-4">可别怪俺</h4>
+                <p class="pre-wrap lead mb-0">此网站用于功能（教学）演示，数据定期删除，不保证可用性</p>
             </div>
         </div>
     </div>
@@ -187,17 +181,17 @@
                             <div class="col-lg-6">
                             <div class="p-5">
                                 <div class="text-center">
-                                <h1 class="h4 text-gray-900 mb-4">Welcome!</h1>
+                                <h1 class="h4 text-gray-900 mb-4">欢迎回来</h1>
                                 </div>
                                 <form class="user">
                                 <div class="form-group">
-                                    <input type="email" class="form-control form-control-user"  value="zhangsan" id="tl-login-username-ipt" aria-describedby="emailHelp" placeholder="your login name, please">
+                                    <input type="email" class="form-control form-control-user"  value="zhangsan" id="tl-login-username-ipt" aria-describedby="emailHelp" placeholder="请输入登录用户名">
                                 </div>
                                 <div class="form-group">
-                                    <input type="password" class="form-control form-control-user"  value="123456" id="tl-login-password-ipt" placeholder="password">
+                                    <input type="password" class="form-control form-control-user"  value="123456" id="tl-login-password-ipt" placeholder="密码">
                                 </div>
                                 <div class="btn btn-primary login-btn">
-                                    Login
+                                    登录
                                 </div>
                                 </form>
                             </div>
@@ -217,8 +211,8 @@
         <div class="modal-content">
             <button class="close" type="button" data-dismiss="modal" aria-label="Close"><span aria-hidden="true"><i class="fas fa-times"></i></span></button>
                                 <!-- Outer Row -->
-            <div class="text-left">Are you want to logout？</div>
-            <div class="btn btn-danger float-right logout-btn">Logout</div>
+            <div class="text-left">确定退出登录？</div>                   
+            <div class="btn btn-danger float-right logout-btn">退出登录</div>
         </div>
     </div>
 </div>
